RESOLVED FIXED214847
thisValue is not always set correctly when calling JS callbacks
https://bugs.webkit.org/show_bug.cgi?id=214847
Summary thisValue is not always set correctly when calling JS callbacks
Chris Dumez
Reported 2020-07-27 14:04:22 PDT
thisValue is not always set correctly when calling JS callbacks. This is causing us to fail the last subtest on: http://w3c-test.org/dom/traversal/TreeWalker-acceptNode-filter.html The specification for TreeWalker is here: - https://dom.spec.whatwg.org/#concept-node-filter Step 6 refers to [call a user object’s operation] in the WebIDL specification: - https://heycam.github.io/webidl/#call-a-user-objects-operation Step 10.5 says: "Set thisArg to O (overriding the provided value)." We're missing this step in our implementation so thisValue ends up being undefined (per earlier step 2).
Attachments
Patch (5.24 KB, patch)
2020-07-27 14:07 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-07-27 14:07:08 PDT
EWS Watchlist
Comment 2 2020-07-27 14:07:51 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
EWS
Comment 3 2020-07-27 15:06:36 PDT
Committed r264948: <https://trac.webkit.org/changeset/264948> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405310 [details].
Radar WebKit Bug Importer
Comment 4 2020-07-27 15:07:19 PDT
Alexey Shvayka
Comment 5 2020-08-02 03:45:04 PDT
*** Bug 213716 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.