thisValue is not always set correctly when calling JS callbacks https://bugs.webkit.org/show_bug.cgi?id=214847

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Import layout test coverage from upstream WPT. We were failing this new subtest
before my fix.

* web-platform-tests/dom/traversal/TreeWalker-acceptNode-filter-expected.txt:
* web-platform-tests/dom/traversal/TreeWalker-acceptNode-filter.html:

Source/WebCore:

thisValue was not always set correctly when calling JS callbacks.

This was causing us to fail the last subtest on:
http://w3c-test.org/dom/traversal/TreeWalker-acceptNode-filter.html

The specification for TreeWalker is here:
- https://dom.spec.whatwg.org/#concept-node-filter

Step 6 refers to [call a user object’s operation] in the WebIDL specification:
 - https://heycam.github.io/webidl/#call-a-user-objects-operation

Step 10.5 says:
"Set thisArg to O (overriding the provided value)."

We were missing this step in our implementation so thisValue ended up being undefined
(as per earlier step 2).

No new tests, resync'd existing test.

* bindings/js/JSCallbackData.cpp:
(WebCore::JSCallbackData::invokeCallback):


Canonical link: https://commits.webkit.org/227663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264948 268f45cc-cd09-0410-ab3c-d52691b4dbfc