Source/WebCore/bindings/js/JSCallbackData.cpp
@@ -38,6 +38,7 @@
 namespace WebCore {
 using namespace JSC;
 
+// https://heycam.github.io/webidl/#call-a-user-objects-operation
 JSValue JSCallbackData::invokeCallback(JSDOMGlobalObject& globalObject, JSObject* callback, JSValue thisValue, MarkedArgumentBuffer& args, CallbackType method, PropertyName functionName, NakedPtr<JSC::Exception>& returnedException)
 {
     ASSERT(callback);
@@ -72,6 +73,8 @@ JSValue JSCallbackData::invokeCallback(JSDOMGlobalObject& globalObject, JSObject
             returnedException = JSC::Exception::create(vm, createTypeError(lexicalGlobalObject));
             return JSValue();
         }
+
+        thisValue = callback;
     }
 
     ASSERT(!function.isEmpty());
